@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.AM950Minnesota" name="AM950 Minnesota" version="1.0.0" provider-name="leopheard">
+<addon id="plugin.audio.AM950Minnesota" name="AM950 Minnesota" version="1.1.0" provider-name="leopheard">
   <requires>
     <import addon="xbmc.python" version="2.26.0"/>
     <import addon="script.module.xbmcswift2" version="2.4.0"/>
@@ -30,6 +30,10 @@
 			<screenshot>resources/media/4.jpg</screenshot>
 			<screenshot>resources/media/6.jpg</screenshot>
 			<screenshot>resources/media/7.jpg</screenshot>
+			<screenshot>resources/media/8.jpg</screenshot>
+			<screenshot>resources/media/9.jpg</screenshot>
+			<screenshot>resources/media/10.jpg</screenshot>
+			<screenshot>resources/media/11.jpg</screenshot>
 		</assets>
   </extension>
 </addon>
